--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -71,7 +71,7 @@
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
-        <string>Tab 1</string>
+        <string>Xtion</string>
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
@@ -92,25 +92,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>214</width>
-               <height>318</height>
-              </rect>
-             </property>
-            </widget>
-           </widget>
-          </item>
-          <item row="0" column="2">
-           <widget class="QScrollArea" name="area3">
-            <property name="widgetResizable">
-             <bool>true</bool>
-            </property>
-            <widget class="QWidget" name="scrollAreaWidgetContents_5">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>214</width>
-               <height>318</height>
+               <width>326</width>
+               <height>320</height>
               </rect>
              </property>
             </widget>
@@ -132,8 +115,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>215</width>
-               <height>318</height>
+               <width>325</width>
+               <height>320</height>
               </rect>
              </property>
             </widget>
@@ -142,6 +125,52 @@
          </layout>
         </item>
        </layout>
+      </widget>
+      <widget class="QWidget" name="tab_2">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <attribute name="title">
+        <string>URG</string>
+       </attribute>
+       <widget class="QScrollArea" name="area3">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>800</width>
+          <height>500</height>
+         </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="widgetResizable">
+         <bool>true</bool>
+        </property>
+        <widget class="QWidget" name="scrollAreaWidgetContents_8">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>16</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </widget>
       </widget>
      </widget>
     </item>
@@ -153,7 +182,7 @@
      <x>0</x>
      <y>0</y>
      <width>703</width>
-     <height>27</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
